TestSuite/errors/err0258.pas
procedure P<T>();

  type
    TRecord = record
    end;

begin
end;

begin
end.